<resources>
    <string name="app_name">LuckyWheels</string>
    <string name="spin">تدوير</string>

    <string name="menu_text_font_family">serif-monospace</string>
    <string name="menu_lucky_wheel_string">دولاب الحظ</string>
    <string name="menu_lottery_string">المسابقات</string>
    <string name="menu_lottery_winner_list_string">قائمة الفائزين</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_profile_string">الملف الشخصي</string>
    <string name="accessibility_service_description">Service Descriotion</string>
    <string name="register">التسجيل</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="password">كلمة المرور</string>
    <string name="email">البريد الالكتروني</string>
    <string name="middle_name">الاسم الأوسط</string>
    <string name="first_name">الاسم الأول</string>
    <string name="last_name">الاسم الأخير</string>
    <string name="login">تسجيل الدخول</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="prize">الجائزة :</string>
    <string name="date">التاريخ :</string>
    <string name="ref_code_hint">من فضلك أدخل كود الدعوة إذا كنت تملك واحداً</string>
    <string name="check_connection">من فضلك تحقق من اتصالك بالانترنت</string>
    <string name="connection_points_error">ليس هناك اتصال بالانترنت من فضلك حاول لاحقاً</string>
    <string name="your_balance">الرصيد</string>
    <string name="your_name">الاسم</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="points">النقاط</string>
    <string name="ref_code">كود الدعوة</string>
    <string name="refresh_hint">تستطيع تحديث الصفحة بالسحب إلى أسفل</string>
    <string name="ref_code_times">عدد مرات الدعوة المتبقية</string>
    <string name="participate">مشاركة في المسابقة</string>
    <string name="_reg_email_error">من فضلك أدخل ايميل صالح</string>
    <string name="_reg_name_error">من فضلك أدخل اسم صالح</string>
    <string name="_reg_fill_field_error">لا يمكنك ترك هذا الحقل فارغ</string>
    <string name="_reg_confirm_pass_error">من فضلك أدخل نفس كلمة المرور للتأكيد</string>
    <string name="_reg_password_error">كلمة السر يجب أن تكون ثلاث محارف على الأقل</string>
    <string name="transfer_points">تحويل نقاط إلى رصيد</string>
    <string name="withdrawal">سحب الرصيد</string>
    <string name="guide">إرشادات الاستخدام</string>
    <string name="transfer_points_error">"من فضلك أدخل رقم النقاط التي تريد تحويلها "</string>
    <string name="dialog_transfer_points">أدخل قيمة النقاط</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="dialog_transfer">تحويل</string>
    <string name="dialog_cancel">إلغاء</string>
    <string name="email_lbl">الايميل</string>
    <string name="dialog_withdrawal">أدخل الرصيد الذي تريد سحبه</string>
    <string name="dialog_withdrawal_request">تأكيد الطلب</string>
    <string name="bank_code">"رقم الحساب "</string>
    <string name="winner_toast">تهانينا أنت أحد الفائزين في المسابقات</string>
    <string name="try_again">حدث خطأ ما.. يرجى المحاولة لاحقاً</string>
    <string name="get_contest">تم جلب المسابقات بنجاح</string>
    <string name="get_winners">تم جلب قائمة الفائزين بنجاح</string>
    <string name="update_profile">تم تحديث الملف الشخصي بنجاح</string>
    <string name="account_info_lbl">معلومات الحساب</string>
    <string name="contest_list_interstatial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="wheel_interstatial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="home_interstatial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="home_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="contests_rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="wait_for_ad">من فضلك انتظر تحميل الإعلان</string>

</resources>