<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@drawable/scrollbar_register_color">

    <LinearLayout
        android:id="@+id/LinearInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_first_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_edit_text_height"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/first_name"
                android:inputType=""
                android:textSize="@dimen/reg_edit_text_text_size"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                />
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_middle_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_edit_text_height"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/middle_name"
                android:inputType="text"
                android:textSize="@dimen/reg_edit_text_text_size"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_last_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_edit_text_height"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="@dimen/reg_edit_text_text_size"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/reg_edit_text_height"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="@dimen/reg_edit_text_text_size"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_ref_code"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/reg_edit_text_height"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/ref_code_hint"
                android:inputType="text"
                android:textSize="@dimen/reg_edit_text_text_size"
                android:paddingStart="@dimen/reg_edit_text_padding_start"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInLayoutRegPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/lightGreen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/reg_edit_text_text_size"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInLayoutRegPasswordConfirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/lightGreen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="@dimen/reg_edit_text_text_size"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/reg_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_reg_login"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@string/menu_text_font_family"/>
    </LinearLayout>
</ScrollView>