<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGreen"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/dialog_withdrawal"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:weightSum="3"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/dialog_balance_value"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:hint="@string/your_balance"
                android:paddingStart="10dp"
                android:fontFamily="@font/gugi_regular"
                android:inputType="number"/>
            <EditText
                android:id="@+id/dialog_bank_code_et"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:hint="@string/bank_code"
                android:paddingStart="10dp"
                android:fontFamily="@font/gugi_regular"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"
                />

            <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp">

                >

                    <Button
                        android:id="@+id/btn_add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:clickable="true"
                        android:text="@string/dialog_withdrawal_request"
                        android:textColor="#5DBCD2"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:clickable="true"
                        android:text="@string/dialog_cancel"
                        android:textColor="#5DBCD2"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>