<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@drawable/scrollbar_register_color">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInLayoutLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_edit_text_height"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                android:textSize="@dimen/reg_edit_text_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInLayoutLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/lightGreen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_edit_text_height"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/reg_edit_text_padding_start"
                android:textSize="@dimen/reg_edit_text_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/login_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ProgressBar
                android:id="@+id/login_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn_reg_login"
                android:fontFamily="@string/menu_text_font_family"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"

                />
        </FrameLayout>


    </LinearLayout>
</ScrollView>

