<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".HomeActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:checkableBehavior="single">

        <LinearLayout
            android:id="@+id/linear_nav_btns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:dividerPadding="0dp"
            android:orientation="vertical"
            android:showDividers="none"
            android:weightSum="4">

            <Button
                android:id="@+id/menu_btn_lucky_wheel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="serif-monospace"
                android:onClick="goToLuckyWheel"
                android:gravity="center"
                android:drawableBottom="@drawable/ic_roulette_game_102_rb"
                android:paddingTop="8dp"
                android:paddingBottom="14dp"
                android:text="@string/menu_lucky_wheel_string"
                android:textColor="@android:color/white"
                android:textSize="@dimen/menu_text_size"
                android:background="@drawable/bg_menu_btn"
                android:layout_weight="1"
                android:textStyle="bold"
                />

                <Button
                    android:id="@+id/menu_btn_lottery"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@string/menu_text_font_family"
                    android:onClick="goToLottery"
                    android:text="@string/menu_lottery_string"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/menu_text_size"
                    android:background="@drawable/bg_menu_btn"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:drawableBottom="@drawable/ic_lottery_game_102_rb"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    />

                <Button
                    android:id="@+id/menu_btn_winners_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_menu_btn"
                    android:fontFamily="@string/menu_text_font_family"
                    android:onClick="goToWinnersList"
                    android:text="@string/menu_lottery_winner_list_string"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/menu_list_text_size"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:drawableBottom="@drawable/ic_winners_list_102_rb"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    />
            <Button
                android:id="@+id/menu_btn_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_menu_btn"                    android:layout_weight="1"
                android:fontFamily="@string/menu_text_font_family"
                android:onClick="gotoProfile"
                android:text="@string/menu_profile_string"
                android:textColor="@android:color/white"
                android:textSize="@dimen/menu_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:drawableBottom="@drawable/ic_profile_102_rb"
                android:paddingTop="8dp"
                android:paddingBottom="14dp"
                />



        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>