<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginStart="6dp"
    android:elevation="8dp"
    >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"

        >

        <!--image view for displaying user image-->

        <ImageView
            android:id="@+id/iv_item_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_item_icon"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:gravity="start"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <!--text view for displaying last name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prize"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

            <!--text view for displaying user email-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/item_tv_fixed_txt_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/linear1"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:gravity="start"
            >
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textColor="@color/darkGreen"
                android:textSize="@dimen/item_tv_txt_size" />

            <!--text view for displaying last name-->
            <TextView
                android:id="@+id/tv_item_prize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Prize"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/item_tv_txt_size" />

            <!--text view for displaying user email-->
            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_tv_txt_size" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>